<?xml version="1.0" encoding="utf-8"?>
<resources>
	
    <string name="city_name">永安</string>
    
    <!-- 应用名称  -->
    <string name="app_name">城市生活—小永安</string>
    <string name="ac_name_news">最新资讯</string>		
    <string name="ac_name_detail">详情</string>
    <string name="ac_name_comment">评论</string>
    <string name="ac_name_login">登录</string>
    <string name="ac_name_register">注册</string>
    <string name="ac_name_pwd_reset">密码重置</string>
    <string name="ac_name_input_phone">密码重置</string>
    <string name="ac_name_order_channel">栏目排序</string>
    <string name="ac_name_add_channel">添加栏目</string>
    <string name="ac_name_account_manager">账号管理</string>
    <string name="ac_name_modify_nickname">修改昵称</string>
    <string name="ac_name_modify_password">修改密码</string>
    <string name="ac_name_modify_gender">修改性别</string>
    <string name="ac_name_vote">投票</string>    
    <string name="ac_name_oldinfo">二手市场</string>
    <string name="ac_name_publish_oldinfo">发布二手信息</string>
    <string name="ac_name_shoot">随手拍</string>
    <string name="ac_name_publish_shoot">发布随手拍</string>
    <string name="ac_name_estate">房地产</string>
    <string name="ac_name_image_browse">图片浏览</string>
    <string name="ac_name_my_collect">我的收藏</string>        
    <string name="ac_name_my_msg">我的消息</string>
    <string name="ac_name_about">关于我们</string>
    <string name="ac_name_search">搜索</string>
    <string name="ac_name_merchant_list">商家列表</string>
    <string name="ac_name_merchant_detail">商家详情</string>
    
    <!-- 欢迎页 -->
    <string name="tips_pull_door">向上滑动进入首页</string>
        
    <!-- 主页面相关  -->
    <string name="tab_name_home">主页</string>
    <string name="tab_name_search">搜索</string>
    <string name="tab_name_account">我的</string>
    <string name="tab_name_settings">设置</string>
    <string name="add">添加</string>
    
    <!-- 搜索  -->
    <string name="hint_search">请输入关键字...</string>
    <string name="search">搜索</string>
    <string name="search_no_result">抱歉，未搜索到关于\"%s\"的结果</string>
    
    <!-- 我的消息  -->
    <string name="msg_empty_toast">您还未收到过消息</string>
    
    <!-- 设置 -->
    <string name="theme_more_toast">敬请期待更多主题...</string>
    <string name="clean_success_toast">清除成功</string>
    
    <!-- 退出提示 -->
    <string name="exit_toast">再按一次退出程序</string>
    
    <!-- 无内容时的提示  -->
    <string name="empty_toast">暂无内容哦</string>
    
    <!-- 评论 -->
    <string name="comment_empty_toast">评论内容不能为空</string>
    <string name="comment_success">发表成功</string>
    <string name="comment_fail">发表不成功，请重试</string>
    <string name="comment_login_toast">您需要先登录，才能评论</string>
    
    <!-- 用户登录注册  -->    
    <string name="hint_username">请输入想修改的昵称</string>
    <string name="hint_userphone">请输入手机号</string>
    <string name="hint_password">请输入密码</string>
    <string name="hint_password_again">请再次输入密码确认</string>
    <string name="hint_old_password">请输入登录密码</string>
    <string name="hint_new_password">请输入新的登录密码</string>
    <string name="hint_verify_code">请输入短信验证码</string>
    <string name="hint_new_password_again">请再次输入新的登录密码</string>
    <string name="login">登录</string>
    <string name="auto_login">自动登录中。。。</string>
    <string name="login_success">登录成功</string>
    <string name="register">注册</string>
    <string name="register_success">注册成功，请登录</string>
    <string name="register_fail">注册失败，请重试</string>
    <string name="forget_password">忘记密码?</string>
    <string name="username_empty_toast">手机号不能为空</string>
    <string name="username_error">手机号格式不正确</string>
    <string name="password_empty_toast">密码不能为空</string>
    <string name="password_no_equasl">密码两次输入不一致</string>
    <string name="password_no_length">密码的长度不足%1$d位</string>
    <string name="verify_empty_toast">密码不能为空</string>
    <string name="verify_no_length">验证码长度不足6位</string>
    <string name="need_login_toast">您需要先登录才能使用收藏哦~</string>    
    <string name="submit">提交</string>
    <string name="reset">重置</string>
    <string name="next">下一步</string>
    <string name="nickname_empty_toast">昵称不能为空</string>
    <string name="nickname_modify_success">昵称修改成功</string>
    <string name="password_modify_success">密码修改成功</string>
    <string name="gender_modify_success">性别修改成功</string>
    <string name="logout">退出当前账号</string>    
    <string name="please_login">请先登录</string>
    
    <!-- 对话框  -->
    <string name="box_option_batch_manager">栏目排序</string>
    <string name="box_option_setlauncher">发送至桌面</string>
    <string name="box_option_delete_item">删除栏目</string>
    
    <!-- 分享、收藏、点赞 -->
    <string name="share">分享</string>
    <string name="collect">收藏</string>
    <string name="collect_cancle">取消收藏</string>
    <string name="collect_success">收藏成功</string>
    <string name="colletc_cancle_success">已取消收藏</string>    
    <string name="collect_empty_toast">您还未收藏过信息</string>
    <string name="favour_toast">感谢您的赞赏</string>
    <string name="favour_cancle_toast">您取消了赞赏</string>
    <string name="favour_login_toast">您需要请先登录，才能为它点赞</string>
    
    <!-- 照片上传  -->
    <string name="take_picture">拍照</string>
    <string name="photo_album">相册</string>
    <string name="photo_del">删除</string>
    <string name="phot_load_fail">照片添加失败，请重试</string>
    <string name="sdcard_error">请确认SD卡是否已插入</string>
    
    <!-- 投票  -->
    <string name="hint_feedback">请写下您的意见...</string>
    <string name="hint_has_voted">您已投过票啦</string>
    <string name="submit_and_next">提交并进入下一题</string>
    <string name="submit_result">提交并查看结果</string>
    <string name="vote_login_toast">你需要先登录才能投票哦~</string>
    <string name="vote_empty_toast">暂无投票</string>
    
    <!-- 随手拍  -->
    <string name="hint_shoot_title">请填写标题</string>
    <string name="hint_shoot_content">请填写内容</string>
    <string name="shoot_list_empty_toast">还没有人发布随手拍信息</string>
    <string name="my_shoot_list_empty_toast">您还未发布随手拍信息</string>
    <string name="publish_shoot_success">发布成功,您可以在我的随手拍中查看</string>
    <string name="del_shoot_info_toast">你是否要删除\"%s\"这条信息？</string>
    
    <!-- 二手市场  -->
    <string name="login_toast">发布前请先登录，如您还未注册赶紧去注册一个吧~</string>
    <string name="title_empty_toast">标题不能为空</string>
    <string name="title_no_length">标题请至少写6个字吧~</string>
    <string name="desc_empty_toast">描述不能为空</string>
    <string name="desc_no_length">描述请至少写10个字</string>
    <string name="price_empty_toast">价格不能为空</string>
    <string name="price_error_toast">价格格式错误或者价格太贵了，无法通过系统的审核</string>
    <string name="address_empty_toast">地址不能为空</string>
    <string name="contacts_empty_toast">联系人不能为空</string>
    <string name="phone_empty_toast">手机号不能为空</string>
    <string name="publish_fail">发布失败,您可以选择重试</string>
    <string name="publish_old_info_success">发布成功,您可以在我的二手货中查看,管理员审核后便可被其他人查看</string>
    <string name="old_info_empty_toast">暂无二手信息</string>
    <string name="my_old_info_empty_toast">您还未发布二手信息</string>
    
    <!-- 房地产 -->
    <string name="estate_empty_toast">暂无房地产资讯</string>
    
    <!-- 资讯  -->
    <string name="toast">温馨提示</string>
    <string name="network_toast">您当前正处于2G/3G/4G状态下,观看视频会产生较多流量，是否继续观看？</string>  
    
    <!-- 商家列表 -->
    <string name="merchant_empty_toast">暂无商家名片</string>
    
    <!-- 用户须知  -->
    <string name="user_protocol_name">用户须知</string>
    <string name="user_protocol_content">您需要接受永安城市生活-小永安的条款</string>
    <string name="user_protocol_toast">你需要同意用户须知的内容才可以注册</string>
    
    <!-- Strings for possible PreferenceActivity Back/Next buttons -->
    <string name="back_button_label">返回</string>
    <string name="next_button_label">前进</string>
    <!-- Optional button to Skip a PreferenceActivity [CHAR LIMIT=20] -->
    <string name="skip_button_label">跳过</string>
</resources>
