<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent" 
    android:background="@color/common_bg_color">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="17.78dp"
        android:layout_marginRight="17.78dp"
        android:orientation="vertical" >

        <EditText
            android:id="@+id/userPhone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="17.78dp"
            android:background="@drawable/edit_selector"
            android:drawableLeft="@drawable/et_ic_phone_selector"
            android:drawablePadding="2dp"
            android:hint="@string/hint_userphone"
            android:inputType="phone"
            android:textColorHint="#ffd5d5d5"
            android:textSize="13.33sp" />

        <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="9.33dp"
            android:background="@drawable/edit_selector"
            android:drawableLeft="@drawable/et_ic_password_selector"
            android:drawablePadding="2dp"
            android:hint="@string/hint_password"
            android:inputType="textPassword"
            android:textColorHint="#ffd5d5d5"
            android:textSize="13.33sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="35dp"
            android:orientation="horizontal" >

            <Button
                android:id="@+id/register"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/btn_cancle_selector"
                android:gravity="center"
                android:text="@string/register" 
                android:textColor="@color/common_cancle_text_color"/>

            <Button
                android:id="@+id/login"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="4.89dp"
                android:layout_weight="1"
                android:background="@drawable/btn_confirm_selector"
                android:gravity="center"
                android:text="@string/login" 
                android:textColor="@color/common_confirm_text_color"/>
        </LinearLayout>

        <TextView
            android:id="@+id/forget_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="22.67dp"
            android:gravity="right"
            android:text="@string/forget_password"
            android:textColor="@color/common_menu_text_color" />
    </LinearLayout>

</RelativeLayout>