<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="17.78dp"
    android:paddingRight="17.78dp"
    android:orientation="vertical" 
    android:background="@color/common_bg_color">

    <EditText
        android:id="@+id/old_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="9.33dp"
        android:background="@drawable/edit_selector"
        android:drawableLeft="@drawable/et_ic_password_selector"
        android:drawablePadding="2dp"
        android:hint="@string/hint_old_password"
        android:inputType="textPassword"
        android:textColorHint="#ffd5d5d5"
        android:textSize="13.33sp" >

        <requestFocus />
    </EditText>

    <EditText
        android:id="@+id/new_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="9.33dp"
        android:background="@drawable/edit_selector"
        android:drawableLeft="@drawable/et_ic_password_selector"
        android:drawablePadding="2dp"
        android:hint="@string/hint_new_password"
        android:inputType="textPassword"
        android:textColorHint="#ffd5d5d5"
        android:textSize="13.33sp" >
    </EditText>

    <EditText
        android:id="@+id/new_password2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="9.33dp"
        android:background="@drawable/edit_selector"
        android:drawableLeft="@drawable/et_ic_password2_selector"
        android:drawablePadding="2dp"
        android:hint="@string/hint_new_password_again"
        android:inputType="textPassword"
        android:textColorHint="#ffd5d5d5"
        android:textSize="13.33sp" >
    </EditText>

    <Button
        android:id="@+id/submit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="9.33dp"
        android:background="@drawable/btn_confirm_selector"
        android:gravity="center"
        android:text="@string/submit"
        android:textColor="@color/common_confirm_text_color" />

</LinearLayout>