<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/common_bg_color"
    android:orientation="vertical"
    android:paddingLeft="17.78dp"
    android:paddingRight="17.78dp" >

    <EditText
        android:id="@+id/new_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="9.33dp"
        android:background="@drawable/edit_selector"
        android:drawableLeft="@drawable/et_ic_password_selector"
        android:drawablePadding="2dp"
        android:hint="@string/hint_new_password"
        android:inputType="textPassword"
        android:textColorHint="#ffd5d5d5"
        android:textSize="13.33sp" >
    </EditText>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="9.33dp"
        android:orientation="horizontal" >

        <EditText
            android:id="@+id/verify_code"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/edit_selector"
            android:drawableLeft="@drawable/et_ic_phone_selector"
            android:drawablePadding="2dp"
            android:hint="@string/hint_verify_code"
            android:inputType="number"
            android:textColorHint="#ffd5d5d5"
            android:textSize="13.33sp" >
        </EditText>

        <Button
            android:id="@+id/re_submit"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="9.33dp"
            android:background="@drawable/btn_cancle_selector"
            android:gravity="center"
            android:text="点击重试"
            android:textColor="@color/common_cancle_text_color" 
            android:visibility="gone"/>
    </LinearLayout>

    <Button
        android:id="@+id/submit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="9.33dp"
        android:background="@drawable/btn_confirm_selector"
        android:gravity="center"
        android:text="@string/reset"
        android:textColor="@color/common_confirm_text_color" />

</LinearLayout>