<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/common_bg_color"
    android:orientation="vertical" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical" >

        <Button
            android:id="@+id/search_btn"
            style="@style/common_btn_style"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:text="@string/search" />

        <EditText
            android:id="@+id/search_et"
            style="@style/common_et_style"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="10dp"
            android:layout_toLeftOf="@id/search_btn"
            android:drawableLeft="@drawable/search_icon"
            android:drawablePadding="5dp"
            android:hint="@string/hint_search" />
    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="#b1b1b1" />

    <FrameLayout
        android:id="@+id/root"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:background="@color/common_bg_color" >

        <LinearLayout
            android:id="@+id/empty_content_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:orientation="vertical"
            android:visibility="visible" >

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/empty_content" />

            <TextView
                android:id="@+id/toast"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/empty_toast"
                android:textColor="#d8d8d8"
                android:textSize="18sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/loading_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:visibility="visible" >

            <ProgressBar
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:indeterminate="true"
                android:indeterminateDrawable="@anim/base_loading_large_anim" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/load_error_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center" >

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/base_load_error_view" />
        </LinearLayout>

        <FrameLayout
            android:id="@+id/content_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <com.handmark.pulltorefresh.library.PullToRefreshListView
                xmlns:ptr="http://schemas.android.com/apk/res-auto"
                android:id="@+id/pull_refresh_list"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:cacheColorHint="#00000000"
                android:divider="@drawable/detail_divider_line"
                android:fadingEdge="none"
                android:fastScrollEnabled="false"
                android:footerDividersEnabled="false"
                android:headerDividersEnabled="false"
                android:smoothScrollbar="true"
                ptr:ptrAnimationStyle="flip" />
        </FrameLayout>
    </FrameLayout>

</LinearLayout>